# ai-soccer

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  POETRY.md  README.md  a  abstractbrain.py  copilot_instructions.md  demo_game.py  demo_learning_game.py  demo_neat_train.py  demo_nographics_game.py  demo_physics.py  demo_tournament.py  field.py  game.py  pyproject.toml  requirements.txt  team.py  test.csv  test_game.py  test_nographics_game.py  test_physics.py  test_tournament.py  test_windowless_game.py
.github/workflows/: pr-checks.yml
aisoccer/: abstractbrain.py  constants.py  game.py  physics.py  team.py  tournament.py
aisoccer/brains/: AdaptiveChaser.py  BaseBrainUtils.py  BehindAndTowards.py  DefendersAndAttackers.py  DefendersAndAttackers2.py  LearningBrain.py  RLBrain.py  RandomWalk.py  SimpleBrain.py  StrategicPlanner.py
aisoccer/graphics/: field.py
brains/: BaseBrainUtils.py  BehindAndTowards.py  DefendersAndAttackers.py  DefendersAndAttackers2.py  RandomWalk.py
config/: neat_demo.cfg
core/: constants.py  game.py  team.py
docs/: genetic_algorithm_learning.md  heuristic_based_learning.md  learning_brain_design.md  performance_ideas.md
tests/: test_brains.py  test_game.py  test_tournament.py
