[tool.poetry]
name = "ai-soccer"
version = "0.1.0"
description = "AI-driven soccer simulation framework"
authors = ["eparkinson <noreply@example.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "aisoccer" } ]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pyglet = "*"
pandas = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
