[tool.poetry]
name = "ai-soccer"
version = "0.1.0"
description = "AI-driven soccer simulation framework"
authors = ["eparkinson <noreply@example.com>"]
license = "MIT"
readme = "README.md"
packages = [ { include = "aisoccer" } ]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pyglet = "*"
pandas = "*"
matplotlib = "*"
numba = "^0.61.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^4.3.0"
isort = "^6.0.1"
mypy = "^1.17.1"
black = "^24.0.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ".venv|venv|build|dist|__pycache__|.mypy_cache|.pytest_cache|.git"
files = ["aisoccer"]
